<resources>
    <string name="app_name">Teacher Assistant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_time_table">TimeTableActivity</string>
    <string name="tab_text_1">MON</string>
    <string name="tab_text_2">TUE</string>
    <string name="tab_text_3">WED</string>
    <string name="tab_text_4">THU</string>
    <string name="tab_text_5">FRI</string>
    <string name="tab_text_6">SAT</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="about">About</string>

    <string name="set_notification_header">Turn On/Off Notifications</string>
    <string name="set_notification_label">Display Notification</string>
    <string name="set_notification_desc">We will remind you as per your scheduled timetable</string>
    <string name="set_class_lable">Class Setting</string>
    <string name="set_class_desc">Edit your class detail</string>
    <string name="remind_me">Remind Me @</string>
    <string name="agreement">Agreement</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="todo">TODO</string>
    <string name="about_us_lable">About Us</string>
    <string name="subject_detail_lable">Subject Setting</string>
    <string name="subjects_setting_lable">Edit your subjects</string>
    <string name="time_table_detail">Lecture Time Setting</string>
    <string name="title_activity_class">Class</string>
    <string name="title_activity_subject">Subject</string>
    <string name="timetable_setting_lable">Edit Your Lecture Timing</string>

    <string-array name="classes">
        <item>SELECT</item>
        <item>FE</item>
        <item>SE</item>
        <item>TE</item>
        <item>BE</item>
    </string-array>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="txtEmpty">List is empty</string>
    <string name="lblBtnDel">Delete Selected Items</string>

    <string name="about_text">\t\tWe are students from RCPIT, Shirpur and created
                     one application that helps you like teacher assistant and help
                      you to manage your lecture and make the notifications for that lecture</string>
</resources>
