<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="com.trinfosoft.teacherassistant.Setting">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llReminder"
        style="@style/settings_item_layout">

        <TextView
            android:id="@+id/tv_reminder_header"
            style="@style/settings_header"
            android:text="@string/set_notification_header"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_reminder_label"
                style="@style/settings_sub_header"
                android:text="@string/set_notification_label" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/timerSwitch"
                android:theme="@style/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_reminder_desc"
            style="@style/settings_details"
            android:paddingBottom="@dimen/items_inbetween_space"
            android:paddingTop="@dimen/items_top_padding"
            android:text="@string/set_notification_desc"
            android:textColor="@color/thumb_inactive" />

    </LinearLayout>

        <!-- view for class setting-->

        <View
            android:background="@color/textColorSecondary"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>

    <LinearLayout
        android:id="@+id/set_class"
        style="@style/settings_item_layout">

        <LinearLayout
            android:id="@+id/ll_set_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label"
                    style="@style/settings_sub_header"
                    android:text="@string/set_class_lable" />

                <!--ImageView
                    android:id="@+id/iv_timer"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_launcher_round" android:contentDescription="@string/todo" /-->

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_reminder_time_desc"
                style="@style/settings_details"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:paddingTop="@dimen/items_top_padding"
                android:text="@string/set_class_desc"
                android:textColor="@color/thumb_inactive" />

        </LinearLayout>

    </LinearLayout>

        <!-- view for subject setting-->
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/textColorSecondary" />

    <LinearLayout
        android:id="@+id/set_subject"
        style="@style/settings_item_layout">

        <LinearLayout
            android:id="@+id/ll_set_time1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_reminder_time_label1"
                    style="@style/settings_sub_header"
                    android:text="@string/subject_detail_lable" />

                <!--ImageView
                    android:id="@+id/iv_timer"
                    android:layout_width="@dimen/timer_icon"
                    android:layout_height="@dimen/timer_icon"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_launcher_round" android:contentDescription="@string/todo" /-->

            </RelativeLayout>


            <TextView
                android:id="@+id/tv_reminder_time_desc1"
                style="@style/settings_details"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:paddingTop="@dimen/items_top_padding"
                android:text="@string/subjects_setting_lable"
                android:textColor="@color/thumb_inactive" />

        </LinearLayout>

    </LinearLayout>

        <!-- view for subject setting-->

            <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/textColorSecondary" />

        <LinearLayout style="@style/settings_item_layout">

            <TextView
                android:id="@+id/tv_agree_header"
                style="@style/settings_header"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:text="@string/agreement"
                android:textColor="@android:color/holo_orange_dark" />

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:paddingTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_agree_terms_label"
                    style="@style/settings_sub_header"
                    android:text="@string/terms_amp_conditions" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:paddingTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_agree_privacy_label"
                    style="@style/settings_sub_header"
                    android:text="@string/privacy_policy" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/items_inbetween_space"
                android:paddingTop="@dimen/items_inbetween_space">

                <TextView
                    android:id="@+id/tv_about_label"
                    style="@style/settings_sub_header"
                    android:text="@string/about_us_lable" />

            </LinearLayout>

        </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>

